--- a/linux-rt-bfq/PKGBUILD
+++ b/linux-rt-bfq/PKGBUILD
@@ -50,13 +50,13 @@ pkgname=('linux-rt-bfq' 'linux-rt-bfq-headers' 'linux-rt-bfq-docs')
 _kernelname=-rt-bfq
 _srcname=linux-4.0
 pkgver=4.0.5
-pkgrel=1
+pkgrel=2
 arch=('i686' 'x86_64')
 url="http://algo.ing.unimo.it"
 license=('GPL2')
 options=('!strip')
 makedepends=('kmod' 'inetutils' 'bc')
-_rtpatchver=rt2
+_rtpatchver=rt3
 _bfqpath="http://algo.ing.unimo.it/people/paolo/disk_sched/patches/4.0.0-v7r8"
 #_bfqpath="https://pf.natalenko.name/mirrors/bfq/4.0.0-v7r8/"
 _gcc_patch="enable_additional_cpu_optimizations_for_gcc_v4.9+_kernel_v3.15+.patch"
@@ -74,9 +74,7 @@ source=("http://www.kernel.org/pub/linux/kernel/v4.x/${_srcname}.tar.xz"
         'linux-rt-bfq.preset'
         'change-default-console-loglevel.patch'
         'config' 'config.x86_64'
-        'fix-race-in-PRT-wait-for-completion-simple-wait-code_Nvidia-RT.patch'
-        'i915-bogus-warning-from-i915-when-running-on-PREEMPT_RT.patch'
-        'fix-typo-in-intel-sst.patch')
+        'fix-race-in-PRT-wait-for-completion-simple-wait-code_Nvidia-RT.patch')
         
 prepare() {
     cd ${_srcname}
@@ -98,15 +96,7 @@ prepare() {
     ### A patch to fix a problem that ought to be fixed in the NVIDIA source code.
     # Stops X from hanging on certain NVIDIA cards
         msg "Fix-race-in-PRT-wait-for-completion-simple-wait-code_Nvidia-RT.patch"
-        patch -p1 -i "${srcdir}/fix-race-in-PRT-wait-for-completion-simple-wait-code_Nvidia-RT.patch"
- 
-    ### Stop a bogus WARN_ON with i915
-        msg "Applying i915-bogus-warning-from-i915-when-running-on-PREEMPT_RT.patch"
-        patch -p1 -i "${srcdir}/i915-bogus-warning-from-i915-when-running-on-PREEMPT_RT.patch"
-
-    ### Fix a typo in soc/intel/sst//sst.c
-        msg "Applying fix-typo-in-intel-sst.patch"
-        patch -p1 -i "${srcdir}/fix-typo-in-intel-sst.patch"    
+        patch -p1 -i "${srcdir}/fix-race-in-PRT-wait-for-completion-simple-wait-code_Nvidia-RT.patch"    
 
     ### Patch source with BFQ
         msg "Patching source with BFQ patches"
@@ -447,7 +437,7 @@ sha512sums=('ce13d2c1c17908fd9a4aa42bb6348a0cb13dd22e560bd54c61b8bfdf62726d6095f
             'SKIP'
             '377371371752eb706053282ee296f82b3af0c3cf84c346091b1e347c8d00fcf6787c5b51c76955af3f61e9c20c30035b110368ee3ba2587871f0dbc92826de32'
             'SKIP'
-            '7a051bc6c7436dc009d708e4ad6dfd269787e855473f31268a141b1357b8ab523f6a47776689598350065fcc5e12fdc4e89a76ee45eb60a4033e99bfedffd705'
+            'bdddcb8cb67fc24f1fdee9bcf0ef09f1df3fc884c1d4e802efd8c7f3959e75955d91d9ee559ce536ad8f1be25db8aac3df43b6e991ad9f76cf778f0dd7e5ef9c'
             'SKIP'
             '1a08e834c4e90a7f9da77460bda1ed0efa9b331811521520402b0d094de3a1155d6e7ddbcbfcbefeef92b5468c56960750f6568cd73114a2a87a9d8a39a63fe8'
             '46cb51684ca5fd9ba9460c8a62be22e99169de1b5e87ac47f9782f52123993de61fe9563ffec062a9b7c2024d08b1d5f57e09a09dbd7841faa3d149f346f5464'
@@ -457,9 +447,7 @@ sha512sums=('ce13d2c1c17908fd9a4aa42bb6348a0cb13dd22e560bd54c61b8bfdf62726d6095f
             'd9d28e02e964704ea96645a5107f8b65cae5f4fb4f537e224e5e3d087fd296cb770c29ac76e0ce95d173bc420ea87fb8f187d616672a60a0cae618b0ef15b8c8'
             '3edcd586d6b21a6d7cdcf12371b431289ece9098cd79c5810d7c48c28dc37a330bc3a963ddf6ae6d4dd479501cb2cfeb3a5874cb4736b93820743dadd074cc18'
             'c670b6b51d12685ad713f48adc8daf7e3f79bd0041e00f1ded5aa1457352821f92551838e273c451458a8ad575ed7f11603bbb3b7ab9c17eadb970c792a2846e'
-            '326dc571c072d4c47381852f16c00c8a7b27d11a5e6ff0f60f5e3a21d4a833c1e467dda1c2a5c04a6611af48bb6ef017f9183ea4ee578aab1a07e91e44d4e528'
-            '6d24e020de0f5955c4064475ebbce1dcb146563445768cb5e66af9a0d5fddb8b1d5f9d5d2d5165a3b1938e26867fe78ff4b19088658340cba394b0c4f994963d'
-            '52a48ba5410babc9ea1880da24a82865d7c7914248cdb14600f5201b3f9241baa7aeb828f47a9c6c2ff7788a20e41e55f41530e7ef49dc82b8926501dcd1a615')
+            '326dc571c072d4c47381852f16c00c8a7b27d11a5e6ff0f60f5e3a21d4a833c1e467dda1c2a5c04a6611af48bb6ef017f9183ea4ee578aab1a07e91e44d4e528')
             
 validpgpkeys=(
               'ABAF11C65A2970B130ABE3C479BE3E4300411886' # Linus Torvalds
