--- a/linux-rt-bfq/config
+++ b/linux-rt-bfq/config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/x86 4.1.3-1 Kernel Configuration
+# Linux/x86 4.1.4-1 Kernel Configuration
 #
 # CONFIG_64BIT is not set
 CONFIG_X86_32=y
@@ -400,6 +400,7 @@ CONFIG_M686=y
 # CONFIG_MBOBCAT is not set
 # CONFIG_MBULLDOZER is not set
 # CONFIG_MPILEDRIVER is not set
+# CONFIG_MSTEAMROLLER is not set
 # CONFIG_MJAGUAR is not set
 # CONFIG_MCRUSOE is not set
 # CONFIG_MEFFICEON is not set
@@ -420,6 +421,7 @@ CONFIG_M686=y
 # CONFIG_MIVYBRIDGE is not set
 # CONFIG_MHASWELL is not set
 # CONFIG_MBROADWELL is not set
+# CONFIG_MSKYLAKE is not set
 # CONFIG_MNATIVE is not set
 CONFIG_X86_GENERIC=y
 CONFIG_X86_INTERNODE_CACHE_SHIFT=6
@@ -6476,6 +6478,7 @@ CONFIG_KXCJK1013=m
 # CONFIG_AD7887 is not set
 # CONFIG_AD7923 is not set
 # CONFIG_AD799X is not set
+# CONFIG_CC10001_ADC is not set
 # CONFIG_MAX1027 is not set
 # CONFIG_MAX1363 is not set
 # CONFIG_MCP320X is not set
