--- a/linux-rt-bfq/config
+++ b/linux-rt-bfq/config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/x86 4.8.15-2 Kernel Configuration
+# Linux/x86 4.8.16-1 Kernel Configuration
 #
 # CONFIG_64BIT is not set
 CONFIG_X86_32=y
@@ -417,6 +417,8 @@ CONFIG_M686=y
 # CONFIG_MPILEDRIVER is not set
 # CONFIG_MSTEAMROLLER is not set
 # CONFIG_MJAGUAR is not set
+# CONFIG_MEXCAVATOR is not set
+# CONFIG_MZEN is not set
 # CONFIG_MCRUSOE is not set
 # CONFIG_MEFFICEON is not set
 # CONFIG_MWINCHIPC6 is not set
