--- a/linux-rt-bfq-git/PKGBUILD
+++ b/linux-rt-bfq-git/PKGBUILD
@@ -50,30 +50,28 @@ _use_current=
 
 pkgbase=linux-rt-bfq-git
 # pkgname=('linux-rt-bfq-git' 'linux-rt-bfq-git-headers' 'linux-rt-bfq-git-docs')
-_major=4.19
-_srcname=linux-stable-rt
-pkgver=4.19.50.rt22.r0.g858848641fbe
-pkgrel=4
+_major=5.2
+_srcname=linux-rt-devel
+pkgver=5.2.rt1.r0.gb47957059cdc
+pkgrel=1
 arch=('x86_64')
-url="https://github.com/Algodev-github/bfq-mq/"
+url="https://mirrors.edge.kernel.org/pub/linux/kernel/projects/rt/"
 license=('GPL2')
 options=('!strip')
-makedepends=('git' 'kmod' 'inetutils' 'bc' 'libelf')
-_bfq_sq_mq_path="bfq-sq-mq-lucjan-patch"
-_bfq_sq_mq_ver='v10r1'
-_bfq_sq_mq_rel='2K190616-rc1'
-_bfq_sq_mq_patch="${_major}-bfq-sq-mq-lucjan-${_bfq_sq_mq_ver}-${_bfq_sq_mq_rel}.patch"
+makedepends=('kmod' 'inetutils' 'bc' 'libelf' 'git' 'python-sphinx' 'python-sphinx_rtd_theme'
+             'graphviz' 'imagemagick')
 #_lucjanpath="https://raw.githubusercontent.com/sirlucjan/kernel-patches/master/${_major}"
 _lucjanpath="https://gitlab.com/sirlucjan/kernel-patches/raw/master/${_major}"
+_bfq_patch="0002-LL-elevator-set-default-scheduler-to-bfq-for-blk-mq.patch"
 _gcc_path="https://raw.githubusercontent.com/graysky2/kernel_gcc_patch/master"
 _gcc_patch="enable_additional_cpu_optimizations_for_gcc_v9.1+_kernel_v4.13+.patch"
 
-source=("git://git.kernel.org/pub/scm/linux/kernel/git/rt/linux-stable-rt.git#branch=v${_major}-rt"
-        "${_lucjanpath}/${_bfq_sq_mq_path}/${_bfq_sq_mq_patch}"
-        "${_lucjanpath}/0100-Check-presence-on-tree-of-every-entity-after-every-a.patch"
+source=("git://git.kernel.org/pub/scm/linux/kernel/git/rt/linux-rt-devel.git/#branch=linux-${_major}.y-rt"
+        "${_lucjanpath}/ll-patches/${_bfq_patch}"
         "${_gcc_path}/${_gcc_patch}"
         "${_lucjanpath}/arch-patches/0001-add-sysctl-to-disallow-unprivileged-CLONE_NEWUSER-by.patch"
-        "${_lucjanpath}/zen-patches/0001-ZEN-Add-CONFIG-for-unprivileged_userns_clone.patch"
+        "${_lucjanpath}/arch-patches/0002-ZEN-Add-CONFIG-for-unprivileged_userns_clone.patch"
+        "${_lucjanpath}/zen-fixes/0002-iwlwifi-mvm-disable-TX-AMSDU-on-older-NICs.patch"
          # the main kernel config files
         'config'
          # pacman hook for depmod
@@ -199,7 +197,7 @@ prepare() {
 build() {
   cd ${_srcname}
 
-  make bzImage modules
+  make bzImage modules htmldocs
 }
 
 _package() {
@@ -354,6 +352,18 @@ _package-docs() {
   mkdir -p "$builddir"
   cp -t "$builddir" -a Documentation
 
+  msg2 "Removing doctrees..."
+  rm -r "$builddir/Documentation/output/.doctrees"
+
+  msg2 "Moving HTML docs..."
+  local src dst
+  while read -rd '' src; do
+    dst="$builddir/Documentation/${src#$builddir/Documentation/output/}"
+    mkdir -p "${dst%/*}"
+    mv "$src" "$dst"
+    rmdir -p --ignore-fail-on-non-empty "${src%/*}"
+  done < <(find "$builddir/Documentation/output" -type f -print0)
+  
   msg2 "Adding symlink..."
   mkdir -p "$pkgdir/usr/share/doc"
   ln -sr "$builddir/Documentation" "$pkgdir/usr/share/doc/$pkgbase"
@@ -371,12 +381,12 @@ for _p in "${pkgname[@]}"; do
 done
 
 sha512sums=('SKIP'
-            '07e1890467ee091835a4908bedb6f26b4c71191f90cf63568825501a39ff352a03a45fdb5a5306ca388b26a1bd130199e4edcda354a138f8f2da340a12dfa626'
-            '0f96fa9ad784709973b32eea82075ceb3e9dc2482df6441a4607612806f069254e63508b1b562279622394e4a1fbebef1b87af8401c0b1210d5d0de9954245c8'
+            'ab20b4a5d9938b0b00a815c127d85fc8de2f1ad7b0f078fca78f511f4fc688ff9948a8bd225b68f1fe83c9cdce1f2561f689bc4dc319393e2ce6fc598b43ba71'
             '8d9547ff38096b99d296cdec9875b816960c09db31acebb033e3660ba65475d1f310578282cac74947d75dff844dd22d7e7c2e4ded12368d32314fe145763752'
-            '560920b4ebf8d7b753f058a41da62d20fde1e4b42a42e73be11461d3fe25b59bc36250a66d9c1c6e3c499426b237427af5ba7586daa7c549d2cf7bb7087932a1'
-            '957b144ccb04cb6b491bf85bba9eb4f4dc86c8ec9e74bee64b64a0fe17afb1647ad21f090f8bbe655a894f5e84698eb6dd556bdefa30b8caceb7f1d7ee0354fe'
-            'a8a5d03576665bb3ccb42f349efdd0bb056ed8f7112c7b93349f9905854e0016c7c89abd642c989bc8dd08d6cdb67d56bce4aca671f5d3a32dc7865373fb831d'
+            '068b9f3bb5112a5684246d0a2ae46bb26d7ad3a642276f5ed37d802b50efc925297d8bd4684eb391676e9a97efbb426b4fcbe6fd751860c3f53d8c0ca7d5a1b2'
+            'f714a620d50541fd29199d076f94e68c14049bbb97b131da3b68b13bcc1dd933f62913e8aad2a20e0ad738f2c3cad161dac13d3d4cbfdfcead271f22f09a681e'
+            'c1fecf034913e7838bb27c4d6e7538515093ef2e88daf8fe18b76cc501b864305b2a03e6e16db7929cbf48be96fe11e2b01e0ba8c1a58811806d78d34350bff5'
+            'c6c815336609f50f71430bbb339e54e5d1283dca0a320fd621ba29a6f86720f33e341fc19ba057e65ea3749ae812eb75878beaddcf0877cff7afcc902eb62417'
             '7ad5be75ee422dda3b80edd2eb614d8a9181e2c8228cd68b3881e2fb95953bf2dea6cbe7900ce1013c9de89b2802574b7b24869fc5d7a95d3cc3112c4d27063a'
             '2718b58dbbb15063bacb2bde6489e5b3c59afac4c0e0435b97fe720d42c711b6bcba926f67a8687878bd51373c9cf3adb1915a11666d79ccb220bf36e0788ab7'
             '8742e2eed421e2f29850e18616f435536c12036ff793f5682a3a8c980cf5dbfc88d17fd9539c87de15d9e4663dc3190f964f18a4722940465437927b6052abbf'
